[gd_scene load_steps=5 format=3 uid="uid://byy2l4mkhng7g"]

[ext_resource type="Theme" uid="uid://d3jium3bs8gi" path="res://assets/theme/theme_mage.tres" id="1_vy54b"]
[ext_resource type="Script" uid="uid://xajigh17ity8" path="res://scenes/ui/main_menu_ui/main_menu_ui.gd" id="2_8fno4"]
[ext_resource type="PackedScene" uid="uid://dg6qwtuqr76dv" path="res://scenes/ui/components/parchment_button.tscn" id="2_vy54b"]
[ext_resource type="PackedScene" uid="uid://uk7n8q5lt0l1" path="res://scenes/ui/pause_ui.tscn" id="3_ylvls"]

[node name="MainMenuUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vy54b")
script = ExtResource("2_8fno4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0470588, 0.0431373, 0.0980392, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Start" parent="ColorRect/MarginContainer/VBoxContainer" instance=ExtResource("2_vy54b")]
layout_mode = 2
size_flags_horizontal = 4
label_text = "Start"

[node name="Options" parent="ColorRect/MarginContainer/VBoxContainer" instance=ExtResource("2_vy54b")]
layout_mode = 2
size_flags_horizontal = 4
label_text = "Options"

[node name="Quit" parent="ColorRect/MarginContainer/VBoxContainer" instance=ExtResource("2_vy54b")]
layout_mode = 2
size_flags_horizontal = 4
label_text = "Quit"

[node name="PauseUi" parent="ColorRect" instance=ExtResource("3_ylvls")]
layout_mode = 2
anchors_preset = 0

[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
